--- a/css/settings.css
+++ b/css/settings.css
@@ -922,8 +922,8 @@ img.tp-slider-alternative-image	{
 
 /*  CAPTION SLIDELINK   **/
 .caption.slidelink a div,
-.tp-caption.slidelink a div {	width:3000px; height:1500px;  background:url(../assets/coloredbg.png) repeat}
-.tp-caption.slidelink a span{	background:url(../assets/coloredbg.png) repeat}
+.tp-caption.slidelink a div {	width:3000px; height:1500px;  background:url(https://2.bp.blogspot.com/-2ZTouIznRZU/Wd3xt5XqnaI/AAAAAAAAEX8/-M2oHqxp5mk3LCYxzNxyKme_MkIbO7YuACKgBGAs/s1600/coloredbg.png) repeat}
+.tp-caption.slidelink a span{	background:url(https://2.bp.blogspot.com/-2ZTouIznRZU/Wd3xt5XqnaI/AAAAAAAAEX8/-M2oHqxp5mk3LCYxzNxyKme_MkIbO7YuACKgBGAs/s1600/coloredbg.png) repeat}
 .tp-shape {	width:100%;height:100%;}
 
 
