--- a/css/theme_shop_1.css
+++ b/css/theme_shop_1.css
@@ -205,7 +205,7 @@ div.quantity .minus{bottom:0;}
 .product-image{display:block;position:relative;background:#fff;border:1px solid #ddd;border-radius:7px;width:100%;padding:0.2381em;}
 .product-image:hover{z-index:1;}
 .product-image .inner{display:block;overflow:hidden;position:relative;}
-.product-image img{border-radius:5px;display:inline-block;width:100%;height:auto;-webkit-transition:opacity 0.3s ease-in-out 0s;-moz-transition:opacity 0.3s ease-in-out 0s;transition:opacity 0.3s ease-in-out 0s;}
+.product-image img{border-radius:5px;display:inline-block;width:185px;height:auto;-webkit-transition:opacity 0.3s ease-in-out 0s;-moz-transition:opacity 0.3s ease-in-out 0s;transition:opacity 0.3s ease-in-out 0s;}
 .product-image .labels{line-height:1;color:#fff;font-weight:600;text-transform:uppercase;}
 .product-image .labels .onhot,.product-image .labels .onsale{position:absolute;z-index:1;top:0.8em;border-radius:4px;font-size:0.8571em;padding:0.5833em 0.6333em;}
 .product-image .labels .onhot{background:#62b959;left:0.8em;}
